--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packmeteor",
-  "version": "0.1.4",
+  "version": "0.1.9",
   "preferGlobal": "true",
   "description": "Package the Meteor js client into a Chrome Packaged App or Cordova/PhoneGap",
   "keywords": [
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vilango/packmeteor.git"
+    "url": "https://github.com/cunneen/packmeteor.git"
   },
   "bin": {
     "packmeteor": "packmeteor.js"
